Footer content updated on all pages.

--- a/services.html
+++ b/services.html
@@ -526,11 +526,14 @@ Click here to see an example of our topographic / site survey drawings.
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
               <h3>KND Surveys</h3>
-              <p>
-                A108 Adam Street <br>
-                NY 535022, UK<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+              <p>74 Watchet Lane<br> 
+                Holmer Green<br> 
+                High Wycombe<br> 
+                Bucks<br> 
+                HP15 6UG
+                <br><br>
+                <strong>Phone:</strong> +44 01494 718453<br>
+                <strong>Email:</strong> admin.office@kndsurveys.com<br>
               </p>
               <div class="social-links d-flex mt-3">
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
