Updated copyright text.

--- a/contact.html
+++ b/contact.html
@@ -359,7 +359,7 @@ HP15 6UG </p>
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>KND Surveys</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>KND Surveys Ltd</span></strong>. All Rights Reserved.
         </div>
         <div class="credits">
         
