--- a/about.html
+++ b/about.html
@@ -517,7 +517,7 @@ But here at KND Surveys Ltd we have ensured that we keep up to date with the lat
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>KND Surveys</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>KND Surveys Ltd</span></strong>. All Rights Reserved.
         </div>
         <div class="credits">
         
