--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@ The use of accurate remote measuring equipment enables us to collect data on bui
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>KND Surveys</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>KND Surveys Ltd</span></strong>. All Rights Reserved.
         </div>
         <div class="credits">
         
