--- a/quick.html
+++ b/quick.html
@@ -327,7 +327,7 @@
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>KND Surveys</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>KND Surveys Ltd</span></strong>. All Rights Reserved.
         </div>
         <div class="credits">
         
