--- a/services.html
+++ b/services.html
@@ -604,7 +604,7 @@ Click here to see an example of our topographic / site survey drawings.
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>KND Surveys</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>KND Surveys Ltd</span></strong>. All Rights Reserved.
         </div>
         <div class="credits">
         
