Diabled one para on 'Our Story' section

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <li><i class="bi bi-broadcast"></i> <span>After completing his formal education in 1972 Nigel Davies, the founder, began working for Amey Roadstone Limited as a setting out engineer on road improvement projects and the M40 in Buckinghamshire.
 </span></li>
                 <li><i class="bi bi-broadcast"></i> <span>In 1973 he was offered a job as setting out engineer for Lovells undertaking work for major housing developments in the Home Counties and soon after was offered the job of supervising other setting out engineers throughout southern England.</p></span></li>
-                <li><i class="bi bi-broadcast"></i> <span>Shortly thereafter he was employed by Hoare Lea and Partners, as part of an experienced team undertaking the surveys of all of the Sultan’s royal properties in the Sultanate of Oman. This extended into working on road projects throughout that country.</span></li>
+                <!-- <li><i class="bi bi-broadcast"></i> <span>Shortly thereafter he was employed by Hoare Lea and Partners, as part of an experienced team undertaking the surveys of all of the Sultan’s royal properties in the Sultanate of Oman. This extended into working on road projects throughout that country.</span></li> -->
               </ul>
               <a href="about.html" class="readmore stretched-link"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
 
