Updated 'Our Story' content

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
           <div class="col-lg-7">
             <h2>Who We Are</h2>
             <div class="our-story">
-              <h4>35 years</h4>
-              <h3>Our Story</h3>
+              <h4>35 years of legacy and counting</h4>
+              <!-- <h3>Our Story</h3> -->
               <p>KND Surveys is a family run business that has been providing a friendly and professional service for over 35 years.</p>
               
               <ul>
